# BoarderframeOS

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  ACC_ENHANCEMENT_COMPLETE.md  AGENT_CONTROL_IMPLEMENTATION_SUMMARY.md  BOARDERFRAMEOS_MIGRATION_CHECKLIST.md  BOARDERFRAMEOS_MIGRATION_GUIDE.md  BOARDERFRAMEOS_MIGRATION_GUIDE_ENHANCED.md  CHANGELOG.md  CLAUDE.md  CLAUDE4_MIGRATION_SUMMARY.md  CONTRIBUTING.md  CORPORATE_HQ_STATUS_FIX.md  DASHBOARD_ENHANCEMENT_COMPLETE.md  DEPARTMENT_BROWSER_README.md  Dockerfile  FILESYSTEM_MCP_IMPLEMENTATION_STATUS.md  FILESYSTEM_MCP_UPDATED_PLAN.md  FIX_ACC_CHAT.md  GOVERNANCE.md  HQ_METRICS_LAYER_SUMMARY.md  INTEGRATION_TESTING.md  LICENSE  MCP_TOOLS_DOCUMENTATION.md  MCP_WEBUI_SETUP.md  METRICS_API_COMPLETE.md  METRICS_INTEGRATION_COMPLETE.md  METRICS_SUMMARY.md  MIGRATION_README.md  Makefile  NEXT_STEPS.md  PAGE_METRICS_ALIGNMENT_COMPLETE.md  PERFORMANCE.md  POSTGRES_ONLY_UPDATE.md  README.md  README_DATABASE_MIGRATION.md  README_DATABASE_TOOLS.md  README_INFRASTRUCTURE.md  RESTORE_GUIDE.md  (+462 more)
mcp_servers/: .env.example  .env.kroger.example  .gitignore  .kroger_tokens.json  ARTIFACT_RENDERING_OPTIMIZATION.md  BUG_DETECTION_REPORT.md  CLAUDE.md  COMPREHENSIVE_INTEGRATION_TEST_RESULTS.md  COMPREHENSIVE_SECURITY_AUDIT_REPORT.md  COMPREHENSIVE_SOLUTION_PLAN.md  DATABASE_SCHEMA_DESIGN.md  DEPLOYMENT_ARCHITECTURE.md  HTTP_TRAFFIC_ANALYSIS_REPORT.md  JSON_RESPONSE_FIX_SUMMARY.md  KROGER_AUTH_TESTING_GUIDE.md  KROGER_AUTH_TEST_SUMMARY.md  KROGER_AUTH_TROUBLESHOOTING.md  KROGER_LLM_AUTH_RECOVERY.md  KROGER_MCP_PHASE2.md  KROGER_SCHEMA_FIX_REPORT.md  KROGER_SSE_ENDPOINTS.md  KROGER_TEST_README.md  KROGER_TOKEN_MANAGEMENT.md  KROGER_TOKEN_MANAGEMENT_IMPLEMENTATION.md  MASTER_IMPLEMENTATION_PLAN.md  MCP_SERVER_MANAGEMENT.md  MCP_SERVER_TEMPLATE.sh  MCP_UI_PROTOCOL_DEEP_DIVE_REPORT.md  MCP_UI_PROTOCOL_GUIDE.md  NETWORK_MONITORING_RESULTS.md  OPEN_WEBUI_SSE_ANALYSIS_REPORT.md  PERFORMANCE_ARCHITECTURE.md  PERFORMANCE_TEST_REPORT.md  PLAYWRIGHT_SERVER_README.md  PLAYWRIGHT_TESTING_GUIDE.md  PLAYWRIGHT_TEST_SUITE_SUMMARY.md  PROCESS_MONITORING_README.md  README.md  SECURITY_AUDIT_COMPREHENSIVE_2025.md  SECURITY_AUDIT_REPORT.md  (+97 more)
mcp_servers/.github/: REPOSITORY_SETUP.md  dependabot.yml  pull_request_template.md
mcp_servers/config/: mcp-config-schema.json  mcp.json  mcp_servers.yaml  security.yaml
mcp_servers/deploy/: PHASE_4C_IMPLEMENTATION_SUMMARY.md  PRODUCTION_RUNBOOK.md
mcp_servers/docker/: .dockerscan.yml  .env.example  .env.prod.template  .env.production.template  .env.template  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_TEST_REPORT.md  Dockerfile  Dockerfile-fixed  Dockerfile-simple  Dockerfile.health  Dockerfile.secure  Dockerfile.security-enhanced  Dockerfile.security-scanner  PRODUCTION_DEPLOYMENT_GUIDE.md  PRODUCTION_SECURITY_RUNBOOK.md  README.md  backup.sh  deploy-production-enhanced.sh  deploy-production-secure.sh  deploy-production.sh  deploy.sh  docker-compose-fixed.yml  docker-compose-simple.yml  docker-compose.compliance.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.secure.yml  docker-compose.security.yml  docker-compose.yml  health-check.sh  integration-test.sh  quick-start.sh  simple-app.py  start.sh  validate.sh
mcp_servers/docs/: ARTIFACT_OPTIMIZATION_USAGE_GUIDE.md  CONFIGURATION_MANAGEMENT_ARCHITECTURE.md  ENTERPRISE_SECURITY_FRAMEWORK.md  LLM_ARTIFACT_RESPONSE_OPTIMIZATION.md  PHASE4_SECURITY_IMPLEMENTATION.md  README.md
mcp_servers/filesystem/: package-lock.json  package.json
mcp_servers/frontend/: .gitignore  .prettierrc  CONFIG_MODAL_USAGE.md  eslint.config.js  package-lock.json  package.json  svelte.config.js  tailwind.config.js  test-api.html  tsconfig.json  vite.config.optimized.ts  vite.config.ts  (+1 more)
(+9111 files in other folders)
